--- a/tmdb/Info.plist
+++ b/tmdb/Info.plist
@@ -43,5 +43,9 @@
 	</array>
 	<key>UIUserInterfaceStyle</key>
 	<string>Light</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>youtube</string>
+	</array>
 </dict>
 </plist>
